--- a/api/.env.example
+++ b/api/.env.example
@@ -1,2 +1,4 @@
 PORT=3000
-NODE_ENV="production"
+NODE_ENV="development || production"
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+JWT_SECRET=""
