--- a/api/.env.example
+++ b/api/.env.example
@@ -1,4 +1,5 @@
 PORT=3000
 NODE_ENV="development || production"
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_HOST="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 JWT_SECRET=""
+JWT_EXPIRES_IN="1h"
