feat(api) : implementation of the supplier creation and listing module

--- a/api/package.json
+++ b/api/package.json
@@ -86,11 +86,15 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@nestjs/core",
       "@prisma/client",
       "@prisma/engines",
       "bcrypt",
       "esbuild",
       "prisma"
+    ],
+    "ignoredBuiltDependencies": [
+      "@swc/core"
     ]
   }
 }
