--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.76.0",
     "axios": "^1.9.0",
