--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.76.0",
     "axios": "^1.9.0",
