--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.76.0",
     "axios": "^1.9.0",
